--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -15,7 +15,9 @@
 
 
         <div class="usermenu" tabindex="0">
+
             {{if .Authenticated}}
+            {{.Name}}
             <svg viewBox="0 0 100 80" width="25" height="25">
                 <rect width="100" height="20" fill="white" />
                 <rect y="30" width="100" height="20" fill="white" />
@@ -30,16 +32,12 @@
             <a href="/auth" class="login-button">Login</a>
             {{end}}
         </div>
-
-
     </div>
-
 
     <div class="posts">
         <div class="post">
             <img src="">
         </div>
-
     </div>
 
 </body>
