--- a/templates/auth.html
+++ b/templates/auth.html
@@ -2,9 +2,7 @@
     <link rel="stylesheet" type="text/css" href="./static/auth.css">
 </head>
 
-
-
-<body>
+<body class="auth-page">
     <div class="authmenu">
         <div id="login">
             <form action="/login" method="post">
