--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,9 +1,12 @@
 <head>
     <link rel="stylesheet" type="text/css" href="./static/styles.css">
+    <link rel="stylesheet" type="text/css" href="./static/auth.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body>
+<body class="dashboard-page">
     <div class="navbar">
+        <h2>Forum</h2>
         <!-- Drop down -->
         <label>Filter by:</label>
 
@@ -17,13 +20,13 @@
         <div class="usermenu" tabindex="0">
 
             {{if .Authenticated}}
-            {{.Name}}
             <svg viewBox="0 0 100 80" width="25" height="25">
                 <rect width="100" height="20" fill="white" />
                 <rect y="30" width="100" height="20" fill="white" />
                 <rect y="60" width="100" height="20" fill="white" />
             </svg>
             <div class="dropdown-content">
+                <h3 style="color:black;">{{.Name}}</h3>
                 <img src="https://icon-library.com/images/facebook-user-icon/facebook-user-icon-4.jpg" />
                 <a href="/logout" class="logout-button">Logout</a>
             </div>
