--- a/templates/static/auth.css
+++ b/templates/static/auth.css
@@ -16,6 +16,9 @@ body {
     background-color: var(--color-bg-body);
     color: var(--color-text);
     font-family: 'Fira Code', monospace, monospace;
+}
+
+body.auth-page{
     display: flex;
     justify-content: center;
     align-items: center;
