--- a/templates/static/styles.css
+++ b/templates/static/styles.css
@@ -1,13 +1,15 @@
+
 .navbar {
-    width: 100%;
-    height: 60px;
+    margin: -8px;
+    height: 73px;
     background-color: black;
     color: white;
-    padding-left: 10px;
+    padding-left: 30px;
+    padding-right: 100px;
     display: flex;
     align-items: center;
     font-size: 18px;
-    gap: 20px;
+    gap: 40px;
 }
 
 .usermenu {
@@ -21,7 +23,7 @@
     display: none;
     align-items: center;
     min-width: 150px;
-    height: 100px;
+    min-height: 100px;
     position: absolute;
     top: 45px;
     right: 0;
@@ -30,11 +32,11 @@
 }
 
 .dropdown-content img {
-    margin-top: 4px;
     width: 42px;
     height: 40px;
     border-radius: 50%;
     cursor: pointer;
+    
 }
 
 .usermenu:focus-within .dropdown-content {
@@ -47,7 +49,7 @@
     width: 100%;
     margin-top: 15px;
     padding-top: 3%;
-    padding-bottom: 3%;
+    padding-bottom: 6%;
     background: none;
     border: none;
     text-align: center;
