--- a/templates/static/styles.css
+++ b/templates/static/styles.css
@@ -1,82 +1,7 @@
-
-.navbar {
-    margin: -8px;
-    height: 73px;
-    background-color: black;
-    color: white;
-    padding-left: 30px;
-    padding-right: 100px;
-    display: flex;
-    align-items: center;
-    font-size: 18px;
-    gap: 40px;
+.highlight {
+    background-color: #7359f8;
+    border-radius: 7%;
+    color: #000000;
+    padding: 0 3px;
 }
 
-.usermenu {
-    position: relative;
-    display: inline-block;
-    margin-left: auto;
-    margin-right: 15px;
-}
-
-.dropdown-content {
-    display: none;
-    align-items: center;
-    min-width: 150px;
-    min-height: 100px;
-    position: absolute;
-    top: 45px;
-    right: 0;
-    background: white;
-    border: 1px solid #ccc;
-}
-
-.usermenu usermenuimg {
-    width: 42px;
-    height: 40px;
-    border-radius: 50%;
-    cursor: pointer;
-}
-
-.usermenu:focus-within .dropdown-content {
-    display: flex;
-    flex-direction: column;
-}
-
-.logout-button {
-    display: block;
-    width: 100%;
-    margin-top: 15px;
-    padding-top: 3%;
-    padding-bottom: 6%;
-    background: none;
-    border: none;
-    text-align: center;
-    color: red;
-    text-decoration: none;
-    cursor: pointer;
-    font-size: 16px;
-    font-weight: bold;
-}
-
-.logout-button:hover,
-.logout-button:focus {
-    background-color: #f0f0f0;
-    outline: none;
-}
-
-.login-button {
-    display: block;
-    padding: 1.5% 1.5%;
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    cursor: pointer;
-    font-size: 16px;
-    font-weight: bold;
-}
-
-.login-button:hover,
-.login-button:focus {
-    background-color: #807777;
-    outline: none;
-}
