--- a/templates/auth.html
+++ b/templates/auth.html
@@ -1,5 +1,6 @@
 <head>
     <link rel="stylesheet" type="text/css" href="./static/auth.css">
+    <link rel="stylesheet" type="text/css" href="./static/styles.css">
     <script src="./static/script.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
