--- a/templates/static/styles.css
+++ b/templates/static/styles.css
@@ -1,3 +1,26 @@
+:root {
+    --color-primary: hsl(254, 12%, 36%);
+    --color-bg-body: #0e0d11;
+    --color-bg-forms: #1d1b22;
+    --color-text: hsl(254, 12%, 78%);
+    --green: hsl(115, 92%, 66%);
+    --color-placeholder: var(--color-primary);
+    --color-button-bg: var(--color-bg-body);
+    --color-button-hover-bg: var(--color-bg-forms);
+    --color-button-hover-border: var(--color-primary);
+    --color-input-bg: var(--color-bg-body);
+    --color-input-text: var(--color-primary);
+    --transition-speed: 0.32s;
+    --border-radius: .375rem;
+
+}
+
+body {
+    background-color: var(--color-bg-body);
+    color: var(--color-text);
+    font-family: 'Fira Code', monospace, monospace;
+}
+
 .highlight {
     background-color: #7359f8;
     border-radius: 7%;
@@ -5,3 +28,65 @@
     padding: 0 3px;
 }
 
+.bottom {
+    background-color: #0d0d11;
+    padding: 20px 5%;
+    display: flex;
+    gap: 20px;
+    align-items: flex-start;
+}
+
+.prefrences {
+    margin-top: 1.26%;
+    padding: 1.5%;
+    border-radius: var(--border-radius);
+    background-color: var(--color-bg-forms);
+    display: flex;
+    flex-direction: column;
+    width: 250px;
+}
+
+.categories {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 10px;
+}
+
+input[type="radio"] {
+    display: none;
+}
+
+.icon {
+    display: none;
+    color: var(--green);
+    margin-right: 5px;
+    vertical-align: middle; /* align with text */
+}
+
+/* Show the SVG when radio is checked 
+input[type="radio"]:checked + span .icon {
+    display: inline-block;
+}
+*/
+.categories span {
+    font-family: "Roboto", sans-serif;
+    font-stretch: condensed;
+    font-weight: 600;
+    padding: 8.5 11px;
+    font-size: 15px;
+    border-radius: var(--border-radius);
+    color: var(--color-text2);
+    background-color: var(--color-bg-body);
+    border: 2px solid transparent;
+    user-select: none;
+    display: inline-flex;
+    align-items: center;
+}
+
+.posts {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
